Bug 231061 - FTP download does not work
Summary: FTP download does not work
Status: RESOLVED FIXED
Alias: None
Product: kget
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Mandriva RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KGet bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-17 05:49 UTC by Andrey Borzenkov
Modified: 2010-03-17 21:44 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrey Borzenkov 2010-03-17 05:49:14 UTC
Version:            (using KDE 4.4.1)
OS:                Linux
Installed from:    Mandriva RPMs

I noticed it at least since 4.4.0 was released. Go to ftp://download.nvidia.com/XFree86/Linux-x86_64/195.36.15/ in Konqueror, right click - Actions - Download with KGet. Download just sits there in KGet at 0% doing nothing. Directly downloading the same file with Konqeuror works.
Comment 1 Matthias Fuchs 2010-03-17 21:44:12 UTC
SVN commit 1104501 by mfuchs:

HACK: Automatically restarts KIODownload if there was an error trying to resume. Is done better in master already.

BUG:231061

 M  +13 -2     kiodownload.cpp  
 M  +1 -0      kiodownload.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1104501