HACK: Automatically restarts KIODownload if there was an error trying to resume. Is done better in master already.

BUG:231061

svn path=/branches/KDE/4.4/kdenetwork/kget/; revision=1104501